; ModuleID = '/home/carl/AnghaBench/git/extr_config.c_matches.c'
source_filename = "/home/carl/AnghaBench/git/extr_config.c_matches.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config_store_data = type { i64, i32, i32 }

@CONFIG_REGEX_NONE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, %struct.config_store_data*)* @matches to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @matches(i8* %0, i8* %1, %struct.config_store_data* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.config_store_data*, align 8
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store %struct.config_store_data* %2, %struct.config_store_data** %7, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = load %struct.config_store_data*, %struct.config_store_data** %7, align 8
  %10 = getelementptr inbounds %struct.config_store_data, %struct.config_store_data* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = call i64 @strcmp(i8* %8, i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %15

14:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %46

15:                                               ; preds = %3
  %16 = load %struct.config_store_data*, %struct.config_store_data** %7, align 8
  %17 = getelementptr inbounds %struct.config_store_data, %struct.config_store_data* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %21, label %20

20:                                               ; preds = %15
  store i32 1, i32* %4, align 4
  br label %46

21:                                               ; preds = %15
  %22 = load %struct.config_store_data*, %struct.config_store_data** %7, align 8
  %23 = getelementptr inbounds %struct.config_store_data, %struct.config_store_data* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = load i64, i64* @CONFIG_REGEX_NONE, align 8
  %26 = icmp eq i64 %24, %25
  br i1 %26, label %27, label %28

27:                                               ; preds = %21
  store i32 0, i32* %4, align 4
  br label %46

28:                                               ; preds = %21
  %29 = load %struct.config_store_data*, %struct.config_store_data** %7, align 8
  %30 = getelementptr inbounds %struct.config_store_data, %struct.config_store_data* %29, i32 0, i32 1
  %31 = load i32, i32* %30, align 8
  %32 = load i8*, i8** %6, align 8
  %33 = icmp ne i8* %32, null
  br i1 %33, label %34, label %42

34:                                               ; preds = %28
  %35 = load %struct.config_store_data*, %struct.config_store_data** %7, align 8
  %36 = getelementptr inbounds %struct.config_store_data, %struct.config_store_data* %35, i32 0, i32 0
  %37 = load i64, i64* %36, align 8
  %38 = load i8*, i8** %6, align 8
  %39 = call i32 @regexec(i64 %37, i8* %38, i32 0, i32* null, i32 0)
  %40 = icmp ne i32 %39, 0
  %41 = xor i1 %40, true
  br label %42

42:                                               ; preds = %34, %28
  %43 = phi i1 [ false, %28 ], [ %41, %34 ]
  %44 = zext i1 %43 to i32
  %45 = xor i32 %31, %44
  store i32 %45, i32* %4, align 4
  br label %46

46:                                               ; preds = %42, %27, %20, %14
  %47 = load i32, i32* %4, align 4
  ret i32 %47
}

declare dso_local i64 @strcmp(i8*, i32) #1

declare dso_local i32 @regexec(i64, i8*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
